Check Emscripten toolchain version for WasmThemis (#879)
* wasm: Introduce emscripten/VERSION

Keep around the Emscripten SDK that should be used to build WasmThemis.
This allows to easily verify that you have the right SDK available.

* CI: Check out Themis before installing non-system dependenices

WasmThemis preparation (Emscripen install) needs access to the repo now.
Check out the code before other dependencies are installed.

* CI: Install Emscripten using the version from the repo

Instead of hardcoding the expected Emscripten version, use the one
maintained in the repository.

* wasm/Makefile: Verify Emscripten environment version

Now that we have everything in place, verify that Emscripten environment
matches the one we expect. "emsdk" command does not support any sort of
"version" query, but the "emcc" binary conveniently includes a version.

* changelog: Mention "make wasmthemis" behavior change

Since users might be accustomed to building WasmThemis with whatever
version they have available, make it known that from now on you are
expected to use exactly the version we support. At least, if you're
building WasmThemis via our Makefile.

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -47,6 +47,10 @@ jobs:
             python3 python3-setuptools \
             ruby ruby-dev \
             pkg-config clang
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Install RVM
         run: |
           sudo apt install --yes software-properties-common
@@ -70,13 +74,14 @@ jobs:
           node-version: 10.x
       - name: Install Emscripten
         run: |
+          version=$(cat src/wrappers/themis/wasm/emscripten/VERSION)
           # Install Emscripten toolchain as described in documentation:
           # https://emscripten.org/docs/getting_started/downloads.html
           cd $HOME
           git clone https://github.com/emscripten-core/emsdk.git
           cd $HOME/emsdk
-          ./emsdk install  2.0.13
-          ./emsdk activate 2.0.13
+          ./emsdk install  "$version"
+          ./emsdk activate "$version"
       - name: Install PHP from PPA
         run: |
           sudo apt install --yes software-properties-common
@@ -87,10 +92,6 @@ jobs:
           sudo update-alternatives --set php        /usr/bin/php7.2
           sudo update-alternatives --set php-config /usr/bin/php-config7.2
           sudo update-alternatives --set phpize     /usr/bin/phpize7.2
-      - name: Check out code
-        uses: actions/checkout@v2
-        with:
-          submodules: true
       - name: Install Themis Core
         run: |
           make
