CI: Use "make test_go" for running GoThemis unit tests

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -61,7 +61,7 @@ jobs:
           make
           sudo make install
       - name: Run test suite (Go ${{ matrix.go }})
-        run: cd gothemis && go test -v ./...
+        run: make test_go
 
   examples:
     name: Code examples
