CI: Test GoThemis examples with latest Go (1.17)
Instead of testing with whatever version is there in "ubuntu-latest",
use a specific version of Go.

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -72,6 +72,10 @@ jobs:
           sudo sh -c 'echo "DEBIAN_FRONTEND=noninteractive" >> /etc/environment'
           sudo apt update
           sudo apt install --yes gcc make libssl-dev
+      - name: Install Go 1.17
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.17
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Themis Core
