GoThemis: Module-aware tests (#881)
* gothemis: Provide "go.mod" file for tools/go

Let's start migrating our legacy integration testing tools and examples
to Go 1.11 modules. Currently they depend on GoThemis being installed
into GOPATH, which is not the default since Go 1.16.

Start by providing "go.mod" file for integration testing tools.
Now it's possible to run tools from "tools/go" with simple "go run"
without installing GoThemis into GOPATH and setting GO111MODULE=off

* gothemis: Provide "go.mod" file for docs/examples/go

Same thing but for code examples. Now you can run examples from that
directory with just "go run". When you do so from the code repository
then the development version of GoThemis is used.

* gothemis: Provide "go.mod" file for docs/examples/Themis-server/go

* Makefile: "test_go" runs test for GoThemis module

Instead of expecting GoThemis to be installed in GOPATH, execute tests
for GoThemis module directly.

* CI: Add Go 1.17 into GoThemis unit test rotation

* CI: Use "make test_go" for running GoThemis unit tests

* CI: Test GoThemis examples with latest Go (1.17)

Instead of testing with whatever version is there in "ubuntu-latest",
use a specific version of Go.

* CI: Don't install GoThemis into GOPATH when testing examples

Since examples are now module-aware, no need to install GoThemis before
running examples. Now Go compiler will figure out that it needs to build
GoThemis from the repository root.

* Makefile: "gothemis_integration_tools" helper target

Similar to "rustthemis_integration_tools" target, precompile GoThemis
integration testing tools. Go modules make it impossible to run tools
from the repository root with "go run", we need to compile them now.

* CI: Build GoThemis integration tools before running tests

* tests: Use precompiled binaries for GoThemis integration tests

Instead of running Go tools via "go run", use the binaries we have
compiled earlier. This is simil

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -25,7 +25,6 @@ on:
     - cron: '20 6 * * 1' # every Monday at 6:20 UTC
 
 env:
-  GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
   WITH_FATAL_WARNINGS: yes
 
 jobs:
@@ -41,6 +40,7 @@ jobs:
           - '1.14'
           - '1.15'
           - '1.16'
+          - '1.17'
       fail-fast: false
     steps:
       - name: Install system dependencies
@@ -60,7 +60,7 @@ jobs:
           make
           sudo make install
       - name: Run test suite (Go ${{ matrix.go }})
-        run: cd gothemis && go test -v ./...
+        run: make test_go
 
   examples:
     name: Code examples
@@ -71,16 +71,16 @@ jobs:
           sudo sh -c 'echo "DEBIAN_FRONTEND=noninteractive" >> /etc/environment'
           sudo apt update
           sudo apt install --yes gcc make libssl-dev
+      - name: Install Go 1.17
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.17
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install Themis Core
         run: |
           make
           sudo make install
-      - name: Install GoThemis
-        run: |
-          mkdir -p $HOME/go/src/$GOTHEMIS_IMPORT
-          rsync -auv gothemis/ $HOME/go/src/$GOTHEMIS_IMPORT
       - name: Test examples (Secure Cell)
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/go
