--- a/docs/examples/java/gradle/wrapper/gradle-wrapper.properties
+++ b/docs/examples/java/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
 #Mon Dec 20 16:40:39 EET 2021
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
