--- a/docs/examples/react-native/android/app/src/main/AndroidManifest.xml
+++ b/docs/examples/react-native/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.reactnativethemis">
+  package="com.themisexample">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -21,7 +21,5 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
-
 </manifest>
