--- a/docs/examples/react-native/package.json
+++ b/docs/examples/react-native/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-themis": "../../../src/wrappers/themis/react-native-themis/"
+    "react-native-themis": "0.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
