--- a/src/wrappers/themis/react-native-themis/package.json
+++ b/src/wrappers/themis/react-native-themis/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-native-themis",
-  "version": "0.14.3",
+  "version": "0.14.4",
   "description": "Themis React Native is a convenient cryptographic library for data protection",
   "react-native": "src/index",
   "source": "src/index",
+  "types": "src/index.d.ts",
   "files": [
     "src",
     "lib",
