--- a/src/wrappers/themis/react-native-themis/package.json
+++ b/src/wrappers/themis/react-native-themis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-themis",
-  "version": "0.14.4",
+  "version": "0.14.5",
   "description": "Themis React Native is a convenient cryptographic library for data protection",
   "react-native": "src/index",
   "source": "src/index",
@@ -62,6 +62,7 @@
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.13",
+    "buffer": "^6.0.3",
     "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
@@ -71,16 +72,15 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "0.69.4",
     "react-native-builder-bob": "^0.18.0",
-    "release-it": "^14.2.2",
-    "typescript": "^4.1.3",
-    "buffer": "^6.0.3"
+    "release-it": "^15.3.0",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
+    "buffer": "^6.0.3",
     "react": "*",
-    "react-native": "*",
-    "buffer": "^6.0.3"
+    "react-native": "*"
   },
   "jest": {
     "preset": "react-native",
