android: Update Gradle, Android plugin, build tools, NDK
Bumping Android Gradle plugin to 7.2.2 so that it picks up new SDKs
and bumping Gradle to 7.3.3 so that it works with the new plugin,
and Android build tools to 30.0.3 so that Gradle works, and with
those new tools NDK has to be configured differently (finally,
it can be pinned in the project configuration itself, instead of
being a free variable in the build machine configuration).

This is quite a YOLO upgrade over multiple major versions, but I don't
think we have a choice. The treadmill must roll forward, because how
else we can Innovate™ to keep the number going up. Otherwise, I can't
build Android Themis anymore with today's tooling.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -3,11 +3,8 @@ apply plugin: 'kotlin-android'
 
 buildscript {
     dependencies {
-        // Using older version since 3.6.X has issues with NDK versioning:
-        // https://github.com/gradle/gradle/issues/12440
-        // And 3.5.X fails to link ARM binaries correctly, so we're staying
-        // on this Gradle version until it breaks or we *need* an upgrade:
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        // Android Gradle plugin
+        classpath 'com.android.tools.build:gradle:7.2.2'
 
         // Kotlin plugin for Android
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -29,7 +26,8 @@ dependencies {
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    buildToolsVersion "30.0.3"
+    ndkVersion "25.1.8937393"
 
     // BoringSSL requires at least API 21. Google Play as of August 2019 requires
     // to target at least API 28 (but we can still support lower versions).
