android: Update Kotlin and other dependencies
Because why not, I'm on a roll. Clicking clickety things in the IDE.
These are only used in tests.

Unfortunately, Kotlin cannot be updated past 1.4.x branch (current
one is 1.7.x) because it desugars into some too new Java 1.8 stuff
which is not supported on Android API 21. We'd have to bump our
minimum API level to use newer versions. So not today.

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ allprojects {
         }
 
         // Set common Kotlin version that we are going to use.
-        ext.kotlin_version = '1.3.72'
+        // Can't use higher versions if we are to maintain API 21 as our minimum.
+        // > Invoke-customs are only supported starting with Android O (--min-api 26)
+        ext.kotlin_version = '1.4.32'
     }
 
     repositories {
