android: New way to filter out annotations
Android has its own annotations under "android" and they conflict
with Jetbrains annotations. I was never motivated enough to unify
them so instead we've been filtering them out for Android builds.

New Gradle -- new approach. Such innovative. Much simpler.

--- a/src/wrappers/themis/android/build.gradle
+++ b/src/wrappers/themis/android/build.gradle
@@ -93,9 +93,11 @@ android {
     // Remove them from compiled code to avoid issues.
     // https://github.com/vimeo/vimeo-networking-java/issues/285
     // https://github.com/vimeo/vimeo-networking-java/pull/321
+    // https://stackoverflow.com/a/68901181
     configurations {
         cleanedAnnotations
-        compile.exclude group: 'org.jetbrains' , module:'annotations'
+        implementation.exclude group: 'org.jetbrains', module:'annotations'
+        androidTestImplementation.exclude group: 'org.jetbrains', module:'annotations'
     }
 }
 
