--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -63,19 +63,23 @@ jobs:
 
   android-tests:
     name: Android emulator
-    runs-on: macos-10.15
+    runs-on: macos-11
     steps:
-      # This particular version of CMake confuses Gradle by not being semver.
-      # We're fine with 3.10.2 which is also installed. Keep an eye on the
-      # virtual environments though:
-      # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#android
-      - name: Nuke CMake 3.18.1-g262b901
-        run: |
-          ~/Library/Android/sdk/tools/bin/sdkmanager --uninstall 'cmake;3.18.1'
       - name: Check out code
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install Android SDK
+        run: |
+          ~/Library/Android/sdk/tools/bin/sdkmanager \
+            'build-tools;30.0.3' \
+            'cmake;3.22.1' \
+            'platforms;android-30' \
+            'ndk;25.0.8775105'
+      # macos-11 defaults to Java 8, but Gradle requires Java 11.
+      # Do this after sdkmanager usage, because *it* needs Java 8.
+      - name: Use Java 11
+        run: echo "JAVA_HOME=$JAVA_HOME_11_X64" >> "$GITHUB_ENV"
       - name: Build Themis
         # This step tends to randomly hang up. Use a shorter timeout here
         # instead of the default 6-hour one.
