--- a/docs/examples/react-native/react-native-example/package.json
+++ b/docs/examples/react-native/react-native-example/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-themis": "^0.14.7"
+    "react-native-themis": "/Users/rad/Downloads/react-native-themis-0.14.10.tgz"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
