--- a/src/wrappers/themis/react-native-themis/package.json
+++ b/src/wrappers/themis/react-native-themis/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "test": "jest",
     "typescript": "tsc",
+    "declaration": "tsc --declaration --emitDeclarationOnly",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
     "release": "release-it"
