CI: Use new `bindgen` binary crate name
https://github.com/rust-lang/rust-bindgen/blob/master/CHANGELOG.md#0610

> Changed
>
> The `bindgen` CLI utility must be installed using
> `cargo install bindgen-cli` now.

They have split it out into a separate crate to cure clap in the main
library, which is quite annoying to have in the build tree.

--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -205,7 +205,7 @@ jobs:
             ${{ runner.os }}-cargo-build-target-unit-tests-
             ${{ runner.os }}-cargo-build-target-
       - name: Install Bindgen
-        run: cargo install bindgen
+        run: cargo install bindgen-cli
       - name: Check out code
         uses: actions/checkout@v2
       - name: Check bindgen.sh output
