CI: Pin ubuntu-20.04
Themis currently does not support OpenSSL 3.0 officially. Ubuntu 22.04
has made the switch and we can't support it in default configuration.
This is something to be worked on in Themis 0.15, I guess, but for that
we need a working CI first. Roll back "ubuntu-latest" to "ubuntu-20.04".

--- a/.github/workflows/code-style.yaml
+++ b/.github/workflows/code-style.yaml
@@ -32,7 +32,7 @@ env:
 jobs:
   check-formatting:
     name: Check formatting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     # GitHub's host contains way too much crap in /etc/apt/sources.list
     # which causes package conflicts in clang-format-8 and clang-tidy-8
     # installation. Run this job in a pristine Ubuntu 20.04 container.
