CI: Test RustThemis with Rust 1.51 and stable
Rust 1.51 is the minimal version that we support, currently limited
by "zeroize" dependency. Make sure it stays that way.

--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -28,6 +28,10 @@ jobs:
   unit-tests:
     name: Unit tests
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        rust: [stable, '1.51']
+      fail-fast: false
     steps:
       - name: Install system dependencies
         run: |
@@ -37,7 +41,7 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ matrix.rust }}
           profile: minimal
           components: rustfmt, clippy
       - name: Check out code
@@ -74,6 +78,10 @@ jobs:
   examples:
     name: Code examples
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        rust: [stable, '1.51']
+      fail-fast: false
     steps:
       - name: Install system dependencies
         run: |
@@ -83,7 +91,7 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ matrix.rust }}
           profile: minimal
       - name: Check out code
         uses: actions/checkout@v2
