themis: `THEMIS_GEN_EC_KEY_PAIR_UNCOMPRESSED=1` (#959)
* soter: Prepare to export uncompressed keys

Update the public key size computation to include a parameter
controlling the key format and prepare the exported to choosing
the format. Actual parameter update comes in the next patch.

* soter: Accept public key format for export

Update Soter's internal uses of engine-specific export APIs.

* soter: soter_ec_export_{private,public}_key()

Another layer of internal functions used for key generation.
Don't ask me why they belong to signature context.

If you look at soter_ec_export_key(), their APIs differ in OpenSSL
and BoringSSL. I have no clue why it's like that but it does not
look like it's necessary, so new things get exactly the same API.

* soter: soter_sign_export_{private,public}_key_ecdsa_none_pkcs8()

Another layer, this will be the replacement for existing API.

Don't ask me why OpenSSL and BoringSSL use different storage for keys.

EVP_PKEY_base_id() checks in OpenSSL are redundant, since
soter_engine_specific_to_ec_priv_key() and
soter_engine_specific_to_ec_pub_key() already do them.

* soter: soter_rsa_export_key() accepts const*

Harmonize those with the new EC exporters. Don't bother updating
the API, RSA is legacy anyway.

* soter: soter_sign_export_key_rsa_pss_pkcs8() use const*

* soter: soter_sign_export_{private,public}_key()

This is the public API of Soter used by Themis for key generation.
Once again, don't ask me why it's extracted from the signing context.

Add some smoke tests for it in Soter, copying the existing ones.
Don't judge them too harshly, okay?

Export the private and public keys using new functions. Test both
public key formats. Test both RSA and ECDSA, but compression works
only for ECDSA.

* soter: Use new API in soter_sign_export_key()

Now start a cleanup in Soter, removing what shims we can remove.

* soter: Drop soter_sign_export_key_ecdsa_none_pkcs8()

* soter: Dro

--- a/.github/workflows/test-core.yaml
+++ b/.github/workflows/test-core.yaml
@@ -83,6 +83,11 @@ jobs:
       - name: Run test suite (OpenSSL)
         if: ${{ matrix.os != 'ubuntu-22.04' }}
         run: make test ENGINE=openssl BUILD_PATH=build-openssl
+      - name: Run test suite (OpenSSL, uncompressed keys)
+        if: ${{ matrix.os != 'ubuntu-22.04' }}
+        env:
+          THEMIS_GEN_EC_KEY_PAIR_UNCOMPRESSED: "1"
+        run: make test ENGINE=openssl BUILD_PATH=build-openssl
       - name: Run test suite (OpenSSL 3.0)
         if: ${{ matrix.os != 'ubuntu-20.04' }}
         run: |
@@ -96,8 +101,28 @@ jobs:
           export WITH_EXPERIMENTAL_OPENSSL_3_SUPPORT=yes
           export WITH_FATAL_WARNINGS=no
           make test BUILD_PATH=build-openssl-3.0
+      - name: Run test suite (OpenSSL 3.0, uncompressed keys)
+        if: ${{ matrix.os != 'ubuntu-20.04' }}
+        env:
+          THEMIS_GEN_EC_KEY_PAIR_UNCOMPRESSED: "1"
+        run: |
+          export ENGINE=openssl
+          # macOS has both OpenSSL 1.1.1 and 3.0 installed, be specific.
+          if [[ "$MATRIX_OS" = "macos-12" ]]; then
+            openssl3="$(brew --prefix openssl@3)"
+            export ENGINE_INCLUDE_PATH="$openssl3/include"
+            export ENGINE_LIB_PATH="$openssl3/lib"
+          fi
+          export WITH_EXPERIMENTAL_OPENSSL_3_SUPPORT=yes
+          export WITH_FATAL_WARNINGS=no
+          make test BUILD_PATH=build-openssl-3.0
       - name: Run test suite (BoringSSL)
         if: always()
+        run: make test ENGINE=boringssl BUILD_PATH=build-boringssl
+      - name: Run test suite (BoringSSL, uncompressed keys)
+        if: always()
+        env:
+          THEMIS_GEN_EC_KEY_PAIR_UNCOMPRESSED: "1"
         run: make test ENGINE=boringssl BUILD_PATH=build-boringssl
       - name: Run test suite (WITH_SCELL_COMPAT)
         if: ${{ matrix.os != 'ubuntu-22.04' }}
