--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -27,7 +27,11 @@ env:
 jobs:
   unit-tests:
     name: Unit tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        rust: ['1.56']
+      fail-fast: false
     steps:
       - name: Install system dependencies
         run: |
@@ -73,7 +77,11 @@ jobs:
 
   examples:
     name: Code examples
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        rust: ['1.56']
+      fail-fast: false
     steps:
       - name: Install system dependencies
         run: |
