--- a/benches/rust/Cargo.toml
+++ b/benches/rust/Cargo.toml
@@ -9,6 +9,8 @@ themis = { version = "0.14", path = "../../src/wrappers/themis/rust" }
 
 [dev-dependencies]
 criterion = { version = "0.3.4", features = ["cargo_bench_support", "html_reports"] }
+# Unpin when MSRV > 1.60
+csv = "~1.1"
 
 [[bench]]
 name = "secure_cell_seal_master_key"
