--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -10,6 +10,8 @@ libthemis-sys = { version = "0.14", path = "../../src/wrappers/themis/rust/libth
 
 [dev-dependencies]
 criterion = { version = "0.3.4", features = ["cargo_bench_support", "html_reports"] }
+# Unpin when MSRV > 1.60
+csv = "~1.1"
 
 [[bench]]
 name = "secure_cell_seal_master_key"
