rust: Specify MSRV in Cargo.toml
Now that we require Rust 1.56+, we can finally put this in Cargo.toml
and do not get a warning which would be treated as an error.

--- a/src/wrappers/themis/rust/Cargo.toml
+++ b/src/wrappers/themis/rust/Cargo.toml
@@ -2,6 +2,7 @@
 name = "themis"
 version = "0.14.0"
 edition = "2018"
+rust-version = "1.58.0"
 authors = ["rust-themis developers"]
 description = "High-level cryptographic services for storage and messaging"
 homepage = "https://www.cossacklabs.com/themis/"
