set rust-version for workflow unit tests

--- a/.github/workflows/test-rust.yaml
+++ b/.github/workflows/test-rust.yaml
@@ -41,6 +41,7 @@ jobs:
       - name: Install stable Rust
         uses: actions-rs/toolchain@v1
         with:
+  	  rust-version: ${{ matrix.rust }}
           toolchain: stable
           profile: minimal
           components: rustfmt, clippy
